--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
       <main>
         <header>
             <h1>Cursos Grátis</h1>
+           
         </header>
         <article>
-            <h2>Cuirso de html5 com css3</h2>
+            <h2>Curso de html5 com css3</h2>
+            <img src="estilos/img/curso-html-css.png" alt="Curso HTML" >
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptatum, voluptatem consequatur ducimus natus rerum aperiam unde tempora. Est, voluptates distinctio eaque qui libero magni cupiditate fuga error necessitatibus! Repellat.</p>
         </article>
         <article>
